# CorretorENA

./: .gitignore  404.html  CorretorENA_Standalone.spec  README.md  TODO.md  index.html  mkdocs.yml  pyproject.toml  run_corretor  run_pyistaller  sitemap.xml
corretor/: .gitignore  Makefile  __main__.py  answers_key.py  cli_corretor.py  collect_marks.py  corretor.py  ena_param.py  enapage.py  grade_exam.py  make.py  page_ena.py  progress_bar.py  pyproject.toml  rects.py  registration.py  requirements.txt  resources_rc.py
corretor/grading/: Makefile  answers.py  answers_key.py  collect_marks.py  ena_form.py  ena_param.py  eval_grades.py  grade_exam.py  grades.py  image_manip.py  marks.py  page_ena.py  pdfs.py  rectangles.py  rects.py  registration.py  spreadsheets.py  tools.py  xls_grades.py
corretor/resources/: Makefile  documentacao.md
corretor/tests/: cli_corretor.py  cli_progress.py  draw_keys.py  draw_rects.py  make.py  test_grading.py
corretor/tests/data/example/: exemplo-dados.xlsx  exemplo-gabarito.txt
corretor/tools/: Makefile  cli_corretor.py  draw_keys.py  draw_rects.py  test_grading.py
corretor/ui/: .gitignore  Makefile  edit_answers_key.py  edit_keys_dialog.py  form_main_window.py  form_main_window.ui  form_show_names.py  form_show_names.ui  form_show_pdf.py  form_show_pdf.ui  help_window.py  keys_model.py  keys_validator.py  main_controler.py  main_controller.py  main_model.py  main_uimodel.py  main_window.py  pdf_window.py  progress_dialog.py  show_names.py  show_pdf.py  show_summary.py
docs/: documentacao.md  index.md
src/: .gitignore  (+2 more)
(+36 files in other folders)
