[project]
name = "CorretorENA"
version = "0.1.0"
requires-python = "==3.13.*"

dependencies = [
    "opencv-python-headless>=4.12.0.88",
    "openpyxl>=3.1.5",
    "pymupdf>=1.26.5",
    "pyside6>=6.10.0",
]

# [tool.uv]
# package = true

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.16",
    "pyinstaller==6.15.*",
    "ruff>=0.12.11",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # Pyflakes errors
    "UP", # pyupgrade rules
]
