[project]
name = "CorretorENA"
version = "0.0.3"
requires-python = "==3.11.*"

dependencies = [
  "altgraph==0.17.3",
  "et-xmlfile==1.1.0",
  "numpy==1.23.5",
  "opencv-python-headless==4.6.0.66",
  "openpyxl==3.0.10",
  "PyMuPDF==1.21.0",
  "PySide6==6.4.1",
  "PySide6-Addons==6.4.1",
  "PySide6-Essentials==6.4.1",
  "shiboken6==6.4.1",
]

# [tool.uv]
# package = true

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.16",
    "pyinstaller==6.15.*",
    "ruff>=0.12.11",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # Pyflakes errors
    "UP", # pyupgrade rules
]
